Fix frontend build errors, add docker configs for production deploy.

--- a/docker/.env-prod
+++ b/docker/.env-prod
@@ -25,9 +25,9 @@ COMPOSE_PROJECT_NAME=superset
 # DATABASE_DIALECT=postgresql
 
 DATABASE_DB=superset
-DATABASE_HOST=35.226.74.162
-DATABASE_PASSWORD=MALc96qDR6nl
-DATABASE_USER=postgres
+DATABASE_HOST=35.226.191.122
+DATABASE_PASSWORD=P9MG4F3XFK4J7PJMU
+DATABASE_USER=superset
 DATABASE_PORT=5432
 DATABASE_DIALECT=postgresql
 
@@ -48,15 +48,12 @@ POSTGRES_PASSWORD=superset
 #MYSQL_RANDOM_ROOT_PASSWORD=yes
 
 # Add the mapped in /app/pythonpath_docker which allows devs to override stuff
-PYTHONPATH=/app/pythonpath:/app/docker/pythonpath_dev
+PYTHONPATH=/app/pythonpath:/app/docker/pythonpath_prod
 REDIS_HOST=redis
 REDIS_PORT=6379
 
 SUPERSET_ENV=production
 SUPERSET_LOAD_EXAMPLES=yes
-# Set this over in superset_config.py because of issue with special chars here
-# Must match what db was init with!
-# SUPERSET_SECRET_KEY="$Aw*n14htLyBDQJG"
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
 MAPBOX_API_KEY=''
