--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -40,7 +40,7 @@ services:
       - redis:/data
 
   # db:
-  #   env_file: docker/.env-non-dev
+  #   env_file: docker/.env-prod
   #   image: postgres:15
   #   container_name: superset_db
   #   restart: unless-stopped
@@ -49,7 +49,7 @@ services:
   #     - ./docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
 
   superset:
-    env_file: docker/.env-non-dev
+    env_file: docker/.env-prod
     image: *superset-image
     container_name: superset_app
     command: ["/app/docker/docker-bootstrap.sh", "app-gunicorn"]
@@ -64,7 +64,7 @@ services:
     image: *superset-image
     container_name: superset_init
     command: ["/app/docker/docker-init.sh"]
-    env_file: docker/.env-non-dev
+    env_file: docker/.env-prod
     depends_on: *superset-depends-on
     user: "root"
     volumes: *superset-volumes
@@ -75,7 +75,7 @@ services:
     image: *superset-image
     container_name: superset_worker
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
-    env_file: docker/.env-non-dev
+    env_file: docker/.env-prod
     restart: unless-stopped
     depends_on: *superset-depends-on
     user: "root"
@@ -91,7 +91,7 @@ services:
     image: *superset-image
     container_name: superset_worker_beat
     command: ["/app/docker/docker-bootstrap.sh", "beat"]
-    env_file: docker/.env-non-dev
+    env_file: docker/.env-prod
     restart: unless-stopped
     depends_on: *superset-depends-on
     user: "root"
