--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -111,7 +111,7 @@ services:
     depends_on: 
       - superset 
     links: 
-      - server:superset
+      - superset:server
     restart: always 
 
 volumes:
