Hide credentials (the've been changed too)

--- a/docker/.env-prod.example
+++ b/docker/.env-prod.example
@@ -25,8 +25,8 @@ COMPOSE_PROJECT_NAME=superset
 # DATABASE_DIALECT=postgresql
 
 DATABASE_DB=superset
-DATABASE_HOST=35.226.191.122
-DATABASE_PASSWORD=P1HU841O5EVDCXN85
+DATABASE_HOST=TODO
+DATABASE_PASSWORD=TODO
 DATABASE_USER=superset
 DATABASE_PORT=5432
 DATABASE_DIALECT=postgresql
